Arreglo conexion base de datos

--- a/crud_articulos_frontend/index.html
+++ b/crud_articulos_frontend/index.html
@@ -37,6 +37,8 @@
             <tr>
                 <th>ID</th>
                 <th>Nombre</th>
+                <th>Marca</th>
+                <th>Talle</th>
                 <th>Precio</th>
                 <th>Acciones</th>
             </tr>
